# CLI-utility_Difference-Generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pyci.yml
gendiff/: __init.__.py  __init__.py  cli.py  file_opener.py  gendiff.py  generate_diff_func.py  open_files.py  parser.py  parsing.py
gendiff/formatters/: format.py  json.py  plain.py  stylish.py
gendiff/formatting/: format.py  json.py  plain.py  stylish.py
gendiff/function/: gendiff_func.py  open_files.py
gendiff/function/formatting/: choose_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: correct_res.json  correct_res_nested.txt  correct_res_plain.txt  correct_res_the_same_file.txt  correct_result.json  correct_results.py  file1.yaml  flat1.json  flat2.json
