[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "he second project - gendiff"
authors = ["Elizaveta"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/lisa-gold/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
pyyaml = "^6.0.1"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
