[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a CLI (gendiff) utility that shows differences between two files in three various formats."
authors = ["Elizaveta"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/lisa-gold/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
